Made footnote text small, even when the footnote is in the title.

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -227,6 +227,7 @@ note[type="footnote"], node[type="footnote"][hide="false"] {
   float: left;
   width: 100%;
   clear: right;
+  font-size: small;
 }
 
 /* never show footnotes marked 'hide'*/
