Changes to get return, return to exit an environment, and to get Theorem to show up at the beginning of theorems.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -1090,8 +1090,9 @@ proposition[numbering="none"] > sectiontitle:first-child::before {
   -moz-user-modify: read-only;
 }
 
-theorem > sectiontitle:first-child::before {
-  content: 'Theorem ' counter(section) "." counter(theorem) ' ';
+theorem > *:first-child:before {
+  content: 'Theorem ' counter(section) "." counter(theorem) '  ';
+  font-weight: bold;
   -moz-user-modify: read-only;
 }
 
@@ -1325,7 +1326,7 @@ summary[numbering="none"] > sectiontitle:first-child::before {
   -moz-user-modify: read-only;
 }
 
-proof > sectiontitle:first-child::before {
+proof > *:first-child::before {
   content: 'Proof ';
   -moz-user-modify: read-only;
   background-color: lightgray;
