--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -467,7 +467,8 @@ input[type="submit"] {
   padding: 0px 6px 0px 6px;
   border: 2px outset ButtonFace;
   background-color: ButtonFace;
-  color: ButtonText; 
+/*  color: ButtonText; 
+*/  
   font: -moz-button;
   line-height: normal !important;
   white-space: pre;
