Change msibreak to msibr.

--- a/prince/res/css/latex_internal.css
+++ b/prince/res/css/latex_internal.css
@@ -85,7 +85,7 @@ span.msirule {
   overflow: hidden;
 }
 
-msibreak {
+msibr {
   display: inline;
   white-space: pre;
 }
@@ -95,7 +95,7 @@ breakobj {
   white-space: pre;
 }
 
-*[showinvis="true"] breakobj:before, *[showinvis="true"] msibreak:before {
+*[showinvis="true"] breakobj:before, *[showinvis="true"] msibr:before {
   color: green;
   content: attr(invisDisplay);
 }
