Change msibreak to msibr (mostly deletions as they are not needed in the help files).

--- a/prince/helpfiles/locale/en-us/css/latex.css
+++ b/prince/helpfiles/locale/en-us/css/latex.css
@@ -149,27 +149,27 @@ msirule {
   display: inline-block;
 }
 
-msibreak[type="customNewLine"]
+msibr[type="customNewLine"]
 {
 	display: block;
 	width: 2px;
 }
 
-msibreak[type="customNewLine"]:after {
+msibr[type="customNewLine"]:after {
   white-space: pre;
   content: "\A";
   -moz-user-select: -moz-none;
 }
 
-*[showinvis="true"] msibreak {
+*[showinvis="true"] msibr {
 	width: 2px;
 }
 
-*[showinvis="true"] msibreak[type="customNewLine"] {
+*[showinvis="true"] msibr[type="customNewLine"] {
 	background-color: green;
 }
 
-msibreak[type="newPage"]:after {
+msibr[type="newPage"]:after {
   white-space: pre;
   content: "\A";
   -moz-user-select: -moz-none;
