Missed a front matter element (translator).

--- a/prince/res/css/amsart.css
+++ b/prince/res/css/amsart.css
@@ -194,6 +194,13 @@ date {
   padding-top: 2pt;
 }
 
+translator {
+  text-align: center;
+  font-weight: normal;
+  display: block;
+  padding-top: 2pt;
+}
+
 subjclass {
   text-align: center;
   font-weight: normal;
