--- a/prince/res/xml/autosubs.xml
+++ b/prince/res/xml/autosubs.xml
@@ -17,7 +17,8 @@
   <sub ctx="text" tp="subst"><pattern>&lt;&#x2013;#</pattern><data>&#x2190;</data><context/><info>0,0</info></sub>
   <sub ctx="both" tp="subst"><pattern>|^#</pattern><data>&#x2191;</data><context/><info>0,0</info></sub>
   <sub ctx="both" tp="subst"><pattern>|v#</pattern><data>&#x2193;</data><context/><info>0,0</info></sub>
-  <sub ctx="both" tp="subst"><pattern>...</pattern><data>&#x2026;</data><context/><info>0,0</info></sub>
+<!--   <sub ctx="text" tp="subst"><pattern>...</pattern><data>&#x2026;</data><context/><info>0,0</info></sub>
+ -->  <sub ctx="math" tp="sc"><pattern>...</pattern><data>insertMathSymbol('x',true);</data></sub>
   <sub ctx="text" tp="sc"><pattern>.yell.</pattern><data>yell('Hey!',true);</data></sub>
   <sub ctx="math" tp="sc"><pattern>intx</pattern><data>insertIntegral(true);</data><context/><info>0,0</info></sub>
   <sub ctx="text" tp="sc"><pattern>.yell.</pattern><data>yell('Hey!',true);</data></sub>
