Add color to division headings; add bodyText that was missing for unknown issue; modify abstract margins and "Abstract" heading; larger indents for quote environments.

--- a/prince/res/css/amsart.css
+++ b/prince/res/css/amsart.css
@@ -1,3 +1,5 @@
+/* amsart.css */
+
 part {
   display: block;
   counter-increment: part;
@@ -7,6 +9,7 @@ part sectiontitle {
   display: block;
   font-size: x-large;
   font-weight: bold;
+  color: rgb(9, 62, 125);
 }
 
 part>sectiontitle:before {
@@ -14,6 +17,7 @@ part>sectiontitle:before {
   display: block;
   font-size: large;
   font-weight: bold;
+  color: rgb(9, 62, 125);
 }
 
 chapter {
@@ -29,13 +33,14 @@ chapter sectiontitle {
   margin-left: 10pt;
   font-size: 14pt;
   font-weight: bold;
+  color: rgb(9, 62, 125);
 }
 
 section {
   display: block;
-/*    counter-increment: section;
+  counter-increment: section;
   counter-reset: subsection;
-  counter-reset: theorem; */
+/*  counter-reset: theorem; */
 }
 
 section sectiontitle {
@@ -44,18 +49,17 @@ section sectiontitle {
   margin-left: 0;
   font-size: large;
   font-weight: bold;
+  color: rgb(9, 62, 125);
 }
 
-/*
 section>sectiontitle:before {
   content: counter(section) ".  ";
 }
-*/
 
 subsection{
   display: block;
-/*    counter-increment: subsection;
-    counter-reset: subsubsection; */
+  counter-increment: subsection;
+  counter-reset: subsubsection;
 }
 
 subsection sectiontitle {
@@ -63,18 +67,17 @@ subsection sectiontitle {
   margin: 10pt 10pt 0 0;
   margin-left: 10pt;
   font-size: large;
+  color: rgb(9, 62, 125);
 }
 
-/*
 subsection>sectiontitle:before {
   content: counter(section) "." counter(subsection) ".  ";
 }
-*/
 
 subsubsection {
   display:block;
-/*    counter-increment: subsubsection;
-    counter-reset: paragraph; */
+  counter-increment: subsubsection;
+    counter-reset: paragraph;
 }
 
 subsubsection sectiontitle {
@@ -83,13 +86,12 @@ subsubsection sectiontitle {
   margin-left: 10pt;
   font-size: medium;
   font-weight: bold;
+  color: rgb(9, 62, 125);
 }
 
-/*
 subsubsection>sectiontitle:before {
   content: counter(section) "." counter(subsection) "." counter(subsubsection) ".  ";
 }
-*/
 
 paragraph {
   display:block;
@@ -100,6 +102,7 @@ paragraph sectiontitle {
   font-size: medium;
   font-weight: normal;
   font-style: italic;
+  color: rgb(9, 62, 125);
 }
 
 /*
@@ -113,6 +116,11 @@ p {
   margin: 10pt 10pt 5pt 5pt;
 }
 
+bodyText {
+  display: block;
+  margin: 10pt 0 5pt 0;
+}
+
 bodyMath {
   display: block;
   margin: 0 10pt 0 5pt;
@@ -122,17 +130,38 @@ bodyMath {
 title {
   font-size: x-large;
   display: block;
+  color: rgb(9, 62, 125);
   margin-top: 12pt;
   text-align: center;
 }
 
 title > short {
    display: inline;
-   padding: 0 0 0 20pt;}
+   padding: 0 0 0 20pt;
+   color: #E1EEFD;
+}
+
+body[showshort='true'] shortTitle {
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] shortTitle:before {
+  content: '[';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
+
+body[showshort='true'] shortTitle:after {
+  content: '] ';
+  display: inline;
+  color: rgb(128, 181, 247);
+}
 
 author {
   text-align: center;
   font-weight: normal;
+  color: rgb(9, 62, 125);
   display: block;
   padding-top: 10pt;
 }
@@ -143,28 +172,30 @@ authorid {
 
 body[showshort='true'] authorid {
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 body[showshort='true'] authorid:before {
   content: '[';
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 body[showshort='true'] authorid:after {
   content: '] ';
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 address {
   display: block;
+  color: rgb(9, 62, 125);
 }
 
 curraddr {
   text-align: center;
   display: block;
+  color: rgb(9, 62, 125);
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-curraddr");
   -moz-user-select: text;
 }
@@ -173,6 +204,7 @@ email {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-email");
   -moz-user-select: text;
@@ -182,6 +214,7 @@ urladdr {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-urladdr");
   -moz-user-select: text;
@@ -191,6 +224,7 @@ thanks {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-thanks");
   -moz-user-select: text;
 }
@@ -199,6 +233,7 @@ date {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
 }
 
@@ -206,6 +241,7 @@ translator {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-translator");
   -moz-user-select: text;
@@ -214,6 +250,7 @@ translator {
 subjclass {
   text-align: center;
   font-weight: normal;
+  color: rgb(9, 62, 125);
   display: block;
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-subjclass");
@@ -226,25 +263,26 @@ subjclassyear {
 
 body[showshort='true'] subjclassyear {
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 body[showshort='true'] subjclassyear:before {
   content: '[';
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 body[showshort='true'] subjclassyear:after {
   content: '] ';
   display: inline;
-  color: green;
+  color: rgb(128, 181, 247);
 }
 
 keywords {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-keywords");
   -moz-user-select: text;
@@ -254,15 +292,35 @@ dedicatory {
   text-align: center;
   font-weight: normal;
   display: block;
+  color: rgb(9, 62, 125);
   padding-top: 2pt;
   -moz-binding: url("chrome://prince/content/bindings/amscls.xml#fmtag-dedicatory");
   -moz-user-select: text;
 }
 
 abstract {
-  text-align: center;
   display: block;
-  margin-bottom: .5in;
+  margin-top: 10pt;
+  margin-left: 0pt;
+  margin-right: 0pt;
+  margin-bottom: 10pt;
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+  padding-bottom: 15pt;
+  font-size: small;
+  border: thin solid black;
+  background-color: #E1EEFD;
+  -moz-border-radius: 5px;
+}
+
+abstract:before {
+  content: "Abstract";
+  display: block;
+  text-align: center;
+  font-size: 100%; font-weight: bold;
+  color: rgb(9, 62, 125);
+  -moz-user-select: -moz-none;
 }
 
 /* Not in article.css (gp)
@@ -314,14 +372,14 @@ img {
 
 shortQuote {
   display: block;
-  margin-left: 20pt;
-  margin-right: 20pt;
+  margin-left: 40pt;
+  margin-right: 40pt;
 }
 
 longQuotation {
   display: block;
-  margin-left: 20pt;
-  margin-right: 20pt;
+  margin-left: 40pt;
+  margin-right: 40pt;
 }
 
 centered {
