Bug 3051. The input filter should put 'type="footnote"' in <notewrapper> as well as in <note>. Otherwise the footnote symbol doesn't show up.

--- a/prince/helpfiles/locale/en-us/css/baselatex.css
+++ b/prince/helpfiles/locale/en-us/css/baselatex.css
@@ -255,11 +255,10 @@ otfont {
 }
 
 /* show footnotes by default*/
-note[type="footnote"], node[type="footnote"][hide="false"] {
+note[type="footnote"], note[type="footnote"][hide="false"] {
   display: block;
-  float: left;
-  width: 100%;
-  clear: right;
+  float: none;
+  width: 90%;
 }
 
 /* never show footnotes marked 'hide'*/
