--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -230,11 +230,10 @@ bulletLabel {
 }
 
 /* show footnotes by default*/
-note[type="footnote"], node[type="footnote"][hide="false"] {
+note[type="footnote"], note[type="footnote"][hide="false"] {
   display: block;
-  float: left;
-  width: 100%;
-  clear: right;
+  float: none;
+  width: 90%;
   font-size: small;
 }
 
