Undo a change that had added indent to numbered lists (I think something else was broken when I made that change, but it's fixed now and this change isn't needed).

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -66,9 +66,9 @@ numberedListItem>bodyText:first-child:before { content: counter(numberedlist, de
   -moz-user-modify: read-only;
 }
 
-numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: '(' counter(numberedlist, lower-latin) ') ';padding-left: 3em;}
-numberedlist numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: counter(numberedlist, lower-roman) '. ';padding-left: 5em;}
-numberedlist numberedlist numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: counter(numberedlist, upper-latin) '. ';padding-left: 7em;}
+numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: '(' counter(numberedlist, lower-latin) ') ';}
+numberedlist numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: counter(numberedlist, lower-roman) '. ';}
+numberedlist numberedlist numberedlist numberedlist numberedListItem>bodyText:first-child:before { content: counter(numberedlist, upper-latin) '. ';}
 
 numberedListItem>bodyText:first-child:first-line { content: '  ';
   -moz-user-modify: read-only;
