--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -658,17 +658,6 @@ paragraph[nonum="true"]>sectiontitle:before {
   -moz-user-select: -moz-none;
 }
 
-
-frontmatter, mainmatter, backmatter {
-  display: block;
-  position: relative;
-  margin-left: 100px;
-  padding: 10px 0px;
-  border: thin solid black;
-  background-color: #EEE8E0;
-  -moz-border-radius: 10px;
-}
-
 preface {
   display: block;
   margin-top: 30pt;
@@ -957,6 +946,22 @@ makelot {
 
 appendix {
   -moz-binding: url("chrome://prince/content/bindings/latex.xml#appendix");
+}
+
+printindex {
+  -moz-binding: url("chrome://prince/content/bindings/latex.xml#printindex");
+}
+
+mainmatter {
+  -moz-binding: url("chrome://prince/content/bindings/latex.xml#mainmatter");
+}
+
+backmatter {
+  -moz-binding: url("chrome://prince/content/bindings/latex.xml#backmatter");
+}
+
+frontmatter {
+  -moz-binding: url("chrome://prince/content/bindings/latex.xml#frontmatter");
 }
 
 line {
