--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -208,9 +208,7 @@ otfont {
   display: inline;
 }
 
-descriptionLabel,
-biblabel,
-bibkey {
+descriptionLabel {
   margin-right: 1em;
   min-width: .5em;
   display: inline;
@@ -469,7 +467,6 @@ bibtexbibliography {
 bibliography {
   list-style-type: none;
   list-style-position: outside;
-
   counter-reset: bibliographylist;
 }
 
@@ -483,11 +480,44 @@ bibitem {
 /*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#bibitem");
 */}
 
-bibitem[hasLabel="true"] {
+bibitem:before {
+  content: '->';
+}
+
+biblabel {
+  display: inline;
+  background-color: rgb(255,255,230);
+  min-width: 1em;
+}
+
+biblabel:before {
+  content: '[';
+}
+
+biblabel:after {
+  content: ']';
+}
+
+bibkey {
+  display: inline;
+  background-color: rgb(255,230,255);
+  min-width: 1em;
+}
+
+bibkey:before {
+  content: '(';
+}
+
+bibkey:after {
+  content: ')';
+}
+
+/*bibitem[hasLabel="true"] {
   display:  block;
   counter-increment: none;
-/*  -moz-binding: url("chrome://prince/content/bindings/latex.xml#bibitemwithlabel");
-*/}
+  -moz-binding: url("chrome://prince/content/bindings/latex.xml#bibitemwithlabel");
+}
+*/
 
 bibitem > biblabel+bodyText {
   display: inline;
