Took out option of hiding front matter buttons. This seems to have caused format update problems with copy/paste and drag/drop in the front matter.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -695,7 +695,7 @@ button[class="frontmattertag"] {
   -moz-user-focus: none;
 }
 
-*[showfmbuttons="true"] button[class="frontmattertag"] {
+/**[showfmbuttons="true"] */button[class="frontmattertag"] {
   position: absolute;
   left: 5px;
   font-family: sans-serif;
