--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -40,6 +40,12 @@ table:focus {
   border-collapse: separate;
 }
 
+caption bodyText {
+  margin: 0;
+  padding: 0;
+  text-indent: 0;
+}
+
 /*table {
   border-collapse: collapse;
   border-style: solid;
