Added bold symbol. There seem to be display issues still.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -1540,6 +1540,11 @@ bold {
   font-weight: 700
 }
 
+boldsymbol {
+  font-weight: 700;
+  font-style: italic;
+}
+
 blackboardBold {
   font-weight: 700
 }
