Centering tables now seems to work. The table displays better. I know that the resize handles are in the wrong place.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -36,6 +36,10 @@ table {
   display: inline-table;
 }
 
+table[display="true"] {
+  display: table;
+}
+
 table:focus {
   border-collapse: separate;
 }
