--- a/prince/res/css/amsart.css
+++ b/prince/res/css/amsart.css
@@ -1,5 +1,9 @@
 /* amsart.css */
 
+/************************/
+/* Division header tags */
+/************************/
+
 part {
   display: block;
   counter-increment: part;
@@ -16,22 +20,6 @@ part>sectiontitle:before {
   content: "Part " counter(part,upper-roman);
   display: block;
   font-size: large;
-  font-weight: bold;
-  color: rgb(9, 62, 125);
-}
-
-chapter {
-  display: block;
-/*  counter-increment: chapter;
-  counter-reset: subchapter;
-  counter-reset: theorem; */
-}
-
-chapter sectiontitle {
-  display: block;
-  margin: 10pt 10pt 0 0;
-  margin-left: 10pt;
-  font-size: 14pt;
   font-weight: bold;
   color: rgb(9, 62, 125);
 }
@@ -111,21 +99,34 @@ paragraph>sectiontitle:before {
 }
 */
 
-p {
-  display: block;
-  margin: 10pt 10pt 5pt 5pt;
+section defaulttitletag:after {
+  content: "Replace this section title";
+  color: red;
 }
 
-bodyText {
-  display: block;
-  margin: 10pt 0 5pt 0;
+subsection defaulttitletag:after {
+  content: "Replace this subsection title";
+  color: red;
 }
 
-bodyMath {
-  display: block;
-  margin: 0 10pt 0 5pt;
-  color: rgb(0,128,64);
+subsubsection defaulttitletag:after {
+  content: "Replace this subsubsection title";
+  color: red;
 }
+
+paragraph defaulttitletag:after {
+  content: "Replace this subsubsubsection title";
+  color: red;
+}
+
+subparagraph defaulttitletag:after {
+  content: "Replace this subsubsubsubsection title";
+  color: red;
+}
+
+/*************************/
+/* Front matter elements */
+/*************************/
 
 title {
   font-size: x-large;
@@ -323,6 +324,26 @@ abstract:before {
   -moz-user-select: -moz-none;
 }
 
+/**********************/
+/* Main text elements */
+/**********************/
+
+p {
+  display: block;
+  margin: 10pt 10pt 5pt 5pt;
+}
+
+bodyText {
+  display: block;
+  margin: 10pt 0 5pt 0;
+}
+
+bodyMath {
+  display: block;
+  margin: 0 10pt 0 5pt;
+  color: rgb(0,128,64);
+}
+
 /* Not in article.css (gp)
 pre, verbatim {
   font-family: Courier; white-space: pre
@@ -369,6 +390,10 @@ img {
   margin: 2em
 }
 */
+
+/****************/
+/* Environments */
+/****************/
 
 shortQuote {
   display: block;
@@ -489,53 +514,240 @@ Huge {
   font-size: 183%
 }
 
-/*
-theorem {
-  display: block;
-  font-style: italic;
-  counter-increment: theorem;
+
+/*****************************/
+/* Theorem-like environments */
+/*****************************/
+
+theorem { counter-increment: theorem; }
+
+theorem > *:first-child:before {
+  content: 'Theorem ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-theorem:before {
-  content:  attr(type) " " counter(section) "."  counter(theorem) ". " ;
-} */
+acknowledgement { counter-increment: acknowledgement; }
 
-/* Not in article.css (gp)
-tabular {
-  display: table
+acknowledgement > *:first-child:before {
+  content: 'Acknowledgement ' counter(acknowledgement) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-tr {
-  display: table-row
+acknowledgment { counter-increment: acknowledgment; }
+
+acknowledgment > *:first-child:before {
+  content: 'Acknowledgment ' counter(acknowledgment) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-td {
-  display: table-cell
-}
-*/
+algorithm { counter-increment: algorithm; }
 
-section defaulttitletag:after {
-  content: "Replace this section title";
-  color: red;
+algorithm > *:first-child:before {
+  content: 'Algorithm ' counter(algorithm) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subsection defaulttitletag:after {
-  content: "Replace this subsection title";
-  color: red;
+assertion { counter-increment: assertion; }
+
+assertion > *:first-child:before {
+  content: 'Assertion ' counter(assertion) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subsubsection defaulttitletag:after {
-  content: "Replace this subsubsection title";
-  color: red;
+assumption { counter-increment: assumption; }
+
+assumption > *:first-child:before {
+  content: 'Assumption ' counter(assumption) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-paragraph defaulttitletag:after {
-  content: "Replace this subsubsubsection title";
-  color: red;
+axiom { counter-increment: axiom; }
+
+axiom > *:first-child:before {
+  content: 'Axiom ' counter(axiom) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subparagraph defaulttitletag:after {
-  content: "Replace this subsubsubsubsection title";
-  color: red;
+case { counter-increment: case; }
+
+case > *:first-child:before {
+  content: 'Case ' counter(case) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+claim { counter-increment: claim; }
+
+claim > *:first-child:before {
+  content: 'Claim ' counter(claim) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+conclusion { counter-increment: conclusion; }
+
+conclusion > *:first-child:before {
+  content: 'Conclusion ' counter(conclusion) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+condition { counter-increment: condition; }
+
+condition > *:first-child:before {
+  content: 'Condition ' counter(condition) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+conjecture { counter-increment: conjecture; }
+
+conjecture > *:first-child:before {
+  content: 'Conjecture ' counter(conjecture) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+convention { counter-increment: convention; }
+
+convention > *:first-child:before {
+  content: 'Convention ' counter(convention) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+corollary { counter-increment: corollary; }
+
+corollary > *:first-child:before {
+  content: 'Corollary ' counter(corollary) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+criterion { counter-increment: criterion; }
+
+criterion > *:first-child:before {
+  content: 'Criterion ' counter(criterion) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+definition { counter-increment: definition; }
+
+definition > *:first-child:before {
+  content: 'Definition ' counter(definition) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+example { counter-increment: example; }
+
+example > *:first-child:before {
+  content: 'Example ' counter(example) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+exercise { counter-increment: exercise; }
+
+exercise > *:first-child:before {
+  content: 'Exercise ' counter(exercise) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+hypothesis { counter-increment: hypothesis; }
+
+hypothesis > *:first-child:before {
+  content: 'Hypothesis ' counter(hypothesis) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+lemma { counter-increment: lemma; }
+
+lemma > *:first-child:before {
+  content: 'Lemma ' counter(lemma) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+notation { counter-increment: notation; }
+
+notation > *:first-child:before {
+  content: 'Notation ' counter(notation) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+observation { counter-increment: observation; }
+
+observation > *:first-child:before {
+  content: 'Observation ' counter(observation) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+problem { counter-increment: problem; }
+
+problem > *:first-child:before {
+  content: 'Problem ' counter(problem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+property { counter-increment: property; }
+
+property > *:first-child:before {
+  content: 'Property ' counter(property) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+proposition { counter-increment: proposition; }
+
+proposition > *:first-child:before {
+  content: 'Proposition ' counter(proposition) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+question { counter-increment: question; }
+
+question > *:first-child:before {
+  content: 'Question ' counter(question) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+remark { counter-increment: remark; }
+
+remark > *:first-child:before {
+  content: 'Remark ' counter(remark) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+solution { counter-increment: solution; }
+
+solution > *:first-child:before {
+  content: 'Solution ' counter(solution) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+summary { counter-increment: summary; }
+
+summary > *:first-child:before {
+  content: 'Summary ' counter(summary) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
