--- a/prince/res/css/amsbook.css
+++ b/prince/res/css/amsbook.css
@@ -1,3 +1,9 @@
+/* amsbook.css */
+
+/************************/
+/* Division header tags */
+/************************/
+
 part {
   display: block;
   counter-increment: part;
@@ -108,16 +114,45 @@ paragraph>sectiontitle:before {
 }
 */
 
-p {
-  display: block;
-  margin: 10pt 10pt 5pt 5pt;
+section defaulttitletag:after {
+  content: "Replace this section title";
+  color: red;
 }
 
-bodyMath {
-  display: block;
-  margin: 0 10pt 0 5pt;
-  color: rgb(0,128,64);
+subsection defaulttitletag:after {
+  content: "Replace this subsection title";
+  color: red;
 }
+
+subsubsection defaulttitletag:after {
+  content: "Replace this subsubsection title";
+  color: red;
+}
+
+paragraph defaulttitletag:after {
+  content: "Replace this subsubsubsection title";
+  color: red;
+}
+
+subparagraph defaulttitletag:after {
+  content: "Replace this subsubsubsubsection title";
+  color: red;
+}
+
+/*************************/
+/* Front matter elements */
+/*************************/
+
+title {
+  font-size: x-large;
+  display: block;
+  margin-top: 12pt;
+  text-align: center;
+}
+
+title > short {
+   display: inline;
+   padding: 0 0 0 20pt;}
 
 author {
   text-align: center;
@@ -137,63 +172,25 @@ address {
   display: block;
 }
 
-title {
-  font-size: x-large;
+
+/**********************/
+/* Main text elements */
+/**********************/
+
+p {
   display: block;
-  margin-top: 12pt;
-  text-align: center;
+  margin: 10pt 10pt 5pt 5pt;
 }
 
-title > short {
-   display: inline;
-   padding: 0 0 0 20pt;}
-
-/* Not in article.css (gp)
-pre, verbatim {
-  font-family: Courier; white-space: pre
+bodyMath {
+  display: block;
+  margin: 0 10pt 0 5pt;
+  color: rgb(0,128,64);
 }
-*/
 
-/* Not in article.css (gp)
-item {
-  margin: 0 0 0 0;
-  padding: 10pt 0 0 20pt;
-  display: list-item
-}
-*/
-
-/* Not in article.css (gp)
-item:before {
-  content: counters(item, ".") ":  ";
-  counter-increment: item;
-}
-*/
-
-/* Not in article.css (gp)
-enumerate {
-  counter-reset: item;
-}
-*/
-
-/* Not in article.css (gp)
-description {
-  counter-reset: item;
-}
-*/
-
-/* Not in article.css (gp)
-itemize {
-  list-style: disc;
-  counter-reset: item;
-}
-*/
-
-/* Not in article.css (gp)
-img {
-  display: inline;
-  margin: 2em
-}
-*/
+/****************/
+/* Environments */
+/****************/
 
 shortQuote {
   display: block;
@@ -314,53 +311,181 @@ Huge {
   font-size: 183%
 }
 
-/*
-theorem {
-  display: block;
-  font-style: italic;
-  counter-increment: theorem;
+/*****************************/
+/* Theorem-like environments */
+/*****************************/
+
+theorem > *:first-child:before {
+  content: 'Theorem ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-theorem:before {
-  content:  attr(type) " " counter(section) "."  counter(theorem) ". " ;
-} */
-
-/* Not in article.css (gp)
-tabular {
-  display: table
+acknowledgement > *:first-child:before {
+  content: 'Acknowledgement ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-tr {
-  display: table-row
+acknowledgment > *:first-child:before {
+  content: 'Acknowledgment ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-td {
-  display: table-cell
-}
-*/
-
-section defaulttitletag:after {
-  content: "Replace this section title";
-  color: red;
+algorithm > *:first-child:before {
+  content: 'Algorithm ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subsection defaulttitletag:after {
-  content: "Replace this subsection title";
-  color: red;
+assertion > *:first-child:before {
+  content: 'Assertion ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subsubsection defaulttitletag:after {
-  content: "Replace this subsubsection title";
-  color: red;
+assumption > *:first-child:before {
+  content: 'Assumption ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-paragraph defaulttitletag:after {
-  content: "Replace this subsubsubsection title";
-  color: red;
+axiom > *:first-child:before {
+  content: 'Axiom ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
-subparagraph defaulttitletag:after {
-  content: "Replace this subsubsubsubsection title";
-  color: red;
+case > *:first-child:before {
+  content: 'Case ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+claim > *:first-child:before {
+  content: 'Claim ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+conclusion > *:first-child:before {
+  content: 'Conclusion ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+condition > *:first-child:before {
+  content: 'Condition ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+conjecture > *:first-child:before {
+  content: 'Conjecture ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+convention > *:first-child:before {
+  content: 'Convention ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+corollary > *:first-child:before {
+  content: 'Corollary ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+criterion > *:first-child:before {
+  content: 'Criterion ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+definition > *:first-child:before {
+  content: 'Definition ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+example > *:first-child:before {
+  content: 'Example ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+exercise > *:first-child:before {
+  content: 'Exercise ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+hypothesis > *:first-child:before {
+  content: 'Hypothesis ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+lemma > *:first-child:before {
+  content: 'Lemma ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+notation > *:first-child:before {
+  content: 'Notation ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+observation > *:first-child:before {
+  content: 'Observation ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+problem > *:first-child:before {
+  content: 'Problem ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+property > *:first-child:before {
+  content: 'Property ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+proposition > *:first-child:before {
+  content: 'Proposition ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+question > *:first-child:before {
+  content: 'Question ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+remark > *:first-child:before {
+  content: 'Remark ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+solution > *:first-child:before {
+  content: 'Solution ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
+}
+
+summary > *:first-child:before {
+  content: 'Summary ' counter(theorem) '  ';
+  font-weight: bold;
+  -moz-user-modify: read-only;
 }
 
