--- a/prince/res/css/book.css
+++ b/prince/res/css/book.css
@@ -34,7 +34,7 @@ chapter {
   display: block;
   counter-increment: chapter;
   counter-reset: section;
-/*  counter-reset: theorem; */
+  counter-reset: theorem;
 }
 
 chapter sectiontitle {
@@ -454,175 +454,175 @@ img {
 /*****************************/
 
 theorem > *:first-child:before {
-  content: 'Theorem ' counter(theorem) '  ';
+  content: 'Theorem ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 acknowledgement > *:first-child:before {
-  content: 'Acknowledgement ' counter(theorem) '  ';
+  content: 'Acknowledgement ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 acknowledgment > *:first-child:before {
-  content: 'Acknowledgment ' counter(theorem) '  ';
+  content: 'Acknowledgment ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 algorithm > *:first-child:before {
-  content: 'Algorithm ' counter(theorem) '  ';
+  content: 'Algorithm ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 assertion > *:first-child:before {
-  content: 'Assertion ' counter(theorem) '  ';
+  content: 'Assertion ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 assumption > *:first-child:before {
-  content: 'Assumption ' counter(theorem) '  ';
+  content: 'Assumption ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 axiom > *:first-child:before {
-  content: 'Axiom ' counter(theorem) '  ';
+  content: 'Axiom ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 case > *:first-child:before {
-  content: 'Case ' counter(theorem) '  ';
+  content: 'Case ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 claim > *:first-child:before {
-  content: 'Claim ' counter(theorem) '  ';
+  content: 'Claim ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 conclusion > *:first-child:before {
-  content: 'Conclusion ' counter(theorem) '  ';
+  content: 'Conclusion ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 condition > *:first-child:before {
-  content: 'Condition ' counter(theorem) '  ';
+  content: 'Condition ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 conjecture > *:first-child:before {
-  content: 'Conjecture ' counter(theorem) '  ';
+  content: 'Conjecture ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 convention > *:first-child:before {
-  content: 'Convention ' counter(theorem) '  ';
+  content: 'Convention ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 corollary > *:first-child:before {
-  content: 'Corollary ' counter(theorem) '  ';
+  content: 'Corollary ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 criterion > *:first-child:before {
-  content: 'Criterion ' counter(theorem) '  ';
+  content: 'Criterion ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 definition > *:first-child:before {
-  content: 'Definition ' counter(theorem) '  ';
+  content: 'Definition ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 example > *:first-child:before {
-  content: 'Example ' counter(theorem) '  ';
+  content: 'Example ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 exercise > *:first-child:before {
-  content: 'Exercise ' counter(theorem) '  ';
+  content: 'Exercise ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 hypothesis > *:first-child:before {
-  content: 'Hypothesis ' counter(theorem) '  ';
+  content: 'Hypothesis ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 lemma > *:first-child:before {
-  content: 'Lemma ' counter(theorem) '  ';
+  content: 'Lemma ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 notation > *:first-child:before {
-  content: 'Notation ' counter(theorem) '  ';
+  content: 'Notation ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 observation > *:first-child:before {
-  content: 'Observation ' counter(theorem) '  ';
+  content: 'Observation ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 problem > *:first-child:before {
-  content: 'Problem ' counter(theorem) '  ';
+  content: 'Problem ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 property > *:first-child:before {
-  content: 'Property ' counter(theorem) '  ';
+  content: 'Property ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 proposition > *:first-child:before {
-  content: 'Proposition ' counter(theorem) '  ';
+  content: 'Proposition ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 question > *:first-child:before {
-  content: 'Question ' counter(theorem) '  ';
+  content: 'Question ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 remark > *:first-child:before {
-  content: 'Remark ' counter(theorem) '  ';
+  content: 'Remark ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 solution > *:first-child:before {
-  content: 'Solution ' counter(theorem) '  ';
+  content: 'Solution ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
 
 summary > *:first-child:before {
-  content: 'Summary ' counter(theorem) '  ';
+  content: 'Summary ' counter(chapter) '.' counter(theorem) '  ';
   font-weight: bold;
   -moz-user-modify: read-only;
 }
